"convert to" is broken #64972

Closed
opened 2019-05-22 05:08:58 +02:00 by Massimiliano Puliero · 16 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31

Blender Version
Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-22 00:34, hash: 0f98c05c8b
Worked: blender-2.80.0-git.2a9214eaaf04-windows64

Short description of error
"convert to" operator (alt+c in blender 2.7 shortcuts ) doesn't work.

Exact steps for others to reproduce the error
Please create a mesh, add a modifier, try to convert to mesh or curve.

thank you

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31 **Blender Version** Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-22 00:34, hash: `0f98c05c8b` Worked: blender-2.80.0-git.2a9214eaaf04-windows64 **Short description of error** "convert to" operator (alt+c in blender 2.7 shortcuts ) doesn't work. **Exact steps for others to reproduce the error** Please create a mesh, add a modifier, try to convert to mesh or curve. thank you

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

#64992 was marked as duplicate of this issue

#64992 was marked as duplicate of this issue

#64980 was marked as duplicate of this issue

#64980 was marked as duplicate of this issue

#64978 was marked as duplicate of this issue

#64978 was marked as duplicate of this issue

Added subscribers: @ssendam, @WilliamReynish

Added subscribers: @ssendam, @WilliamReynish
Dalai Felinto was assigned by William Reynish 2019-05-22 10:09:27 +02:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Yes, can confirm now.

@dfelinto it seems like this worked until 0910932e71. If this operator broke, maybe others did too?

Yes, can confirm now. @dfelinto it seems like this worked until 0910932e71d2. If this operator broke, maybe others did too?

This issue was referenced by 85322737ba

This issue was referenced by 85322737baec7f82f4b31a59275985d8e19a261e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @radcatradcat, @Hickz

Added subscribers: @radcatradcat, @Hickz

This is still broken, check out the sample file:
Sampple.blend

This is still broken, check out the sample file: [Sampple.blend](https://archive.blender.org/developer/F7060626/Sampple.blend)

Added subscriber: @brecht

Added subscriber: @brecht

@Hickz the original report bug was fixed, in the very latest build.

If there is another issue with that build, you can create a new report.

@Hickz the original report bug was fixed, in the very latest build. If there is another issue with that build, you can create a new report.

@brecht I did, here's the task link:
https://developer.blender.org/T63871

@brecht I did, here's the task link: https://developer.blender.org/T63871

Ok, that is indeed a different bug than the recent issue.

Ok, that is indeed a different bug than the recent issue.

Added subscriber: @georgK

Added subscriber: @georgK
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64972
No description provided.